--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=none
 server.port=8082
+spring.flyway.validate-on-migrate=false
+spring.flyway.repair-on-migrate=true
