--- a/order-service/docker-compose.yml
+++ b/order-service/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '4'
 services:
   mysql:
     image: mysql:8.3.0
@@ -9,5 +8,4 @@ services:
       - "3307:3306"
     volumes:
       - ./mysql:/var/lib/mysql
-      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
-
+      - ./docker/mysql/init:/docker-entrypoint-initdb.d
