--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3307/order_service
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=none
-server.port=8082
+inventory.url=http://localhost:8082
+server.port=8084
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
 
